--- a/src/components/Animals/Animals.scss
+++ b/src/components/Animals/Animals.scss
@@ -1,3 +1,4 @@
+@use "../../styles/animations";
 
 .Animals {
    padding-block: 64px;
@@ -12,10 +13,10 @@
       text-decoration: none;
       font-size: 24px;
       font-weight: 700;
-      background-color: #fca9b4;
-      padding: 20px;
-      border: 4px solid #D95F70;
+      padding: 30px;
       border-radius: 40px;
+      cursor: pointer;
+      background: url('https://demo.promo///og/CH/images/return.png') center no-repeat;
    }
 
    .animals_block {
@@ -33,29 +34,26 @@
          display: flex;
       flex-direction: column;
       align-items: center;
+      cursor: pointer;
 
-      &.playing {
-      animation: bounce 0.6s infinite;
+      @media (max-width: 429px){
+        width: 40vw;
       }
+
       }
 
       &_img {
          border: 2px solid #D95F70;
-      border-radius: 80px;
+      border-radius: 50%;
+      width: 180px;
+      height: 180px;
+      
+      @media (max-width: 429px){
+        width: 40vw;
+        height: 40vw;
+      }
       }
      }
     
    } 
-}
-
-@keyframes bounce {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(-10px);
-  }
-  100% {
-    transform: translateY(0);
-  }
 }
