--- a/src/components/Colors/Colors.scss
+++ b/src/components/Colors/Colors.scss
@@ -11,10 +11,10 @@
       text-decoration: none;
       font-size: 24px;
       font-weight: 700;
-      background-color: #fca9b4;
-      padding: 20px;
-      border: 4px solid #D95F70;
+      padding: 30px;
       border-radius: 40px;
+      cursor: pointer;
+      background: url('https://demo.promo///og/CH/images/return.png') center no-repeat;
    }
 
    .colors_block {
@@ -31,6 +31,7 @@
          display: flex;
       flex-direction: column;
       align-items: center;
+      cursor: pointer;
 
       &.playing {
       animation: bounce 0.6s infinite;
@@ -38,10 +39,14 @@
       }
 
       &_color {
-         width: 195px;
-         height: 195px;
          border: 2px solid #D95F70;
          border-radius: 80px;
+         width: 180px;
+         height: 180px;
+         @media (max-width: 429px){
+        width: 40vw;
+        height: 40vw;
+      }
       }
      }
     
