--- a/src/components/Days/Days.scss
+++ b/src/components/Days/Days.scss
@@ -11,10 +11,10 @@
       text-decoration: none;
       font-size: 24px;
       font-weight: 700;
-      background-color: #fca9b4;
-      padding: 20px;
-      border: 4px solid #D95F70;
+      padding: 30px;
       border-radius: 40px;
+      cursor: pointer;
+      background: url('https://demo.promo///og/CH/images/return.png') center no-repeat;
    }
 
    .days_block {
@@ -37,6 +37,11 @@
       padding-block: 30px;
       border: 4px solid #D95F70;
       border-radius: 40px;
+      cursor: pointer;
+
+      @media (max-width: 429px){
+        width: 90vw;
+      }
 
       &.playing {
       animation: bounce 0.6s infinite;
