--- a/src/components/MainScreenComponent/MainScreenComponent.scss
+++ b/src/components/MainScreenComponent/MainScreenComponent.scss
@@ -3,16 +3,25 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 195px;
+    width: 180px;
     height: 238px;
     cursor: pointer;
 
+    @media (max-width: 429px){
+        width: 40vw;
+      }
+
     .component {
-        &__image {
-            width: 195px;
-            height: 195px;
+        &_image {
+            width: 180px;
+            height: 180px;
             border-radius: 40px;
             object-fit: cover;
+
+            @media (max-width: 429px){
+        width: 40vw;
+        height: 40vw;
+      }
         }
     }
 }
