--- a/src/components/Vege/Vege.scss
+++ b/src/components/Vege/Vege.scss
@@ -11,10 +11,10 @@
       text-decoration: none;
       font-size: 24px;
       font-weight: 700;
-      background-color: #fca9b4;
-      padding: 20px;
-      border: 4px solid #D95F70;
+      padding: 30px;
       border-radius: 40px;
+      cursor: pointer;
+      background: url('https://demo.promo///og/CH/images/return.png') center no-repeat;
    }
 
    .vege_block {
@@ -32,29 +32,23 @@
          display: flex;
       flex-direction: column;
       align-items: center;
+      cursor: pointer;
 
-      &.playing {
-      animation: bounce 0.6s infinite;
+      @media (max-width: 429px){
+        width: 40vw;
       }
       }
 
       &_img {
          border: 2px solid #D95F70;
       border-radius: 80px;
+      width: 180px;
+
+      @media (max-width: 429px){
+        width: 40vw;
+      }
       }
      }
     
    } 
-}
-
-@keyframes bounce {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(-10px);
-  }
-  100% {
-    transform: translateY(0);
-  }
 }
