--- a/src/components/Colors/Colors.scss
+++ b/src/components/Colors/Colors.scss
@@ -32,6 +32,7 @@
       flex-direction: column;
       align-items: center;
       cursor: pointer;
+      -webkit-tap-highlight-color: transparent;
 
       &.playing {
       animation: bounce 0.6s infinite;
