--- a/src/components/MainScreenComponent/MainScreenComponent.scss
+++ b/src/components/MainScreenComponent/MainScreenComponent.scss
@@ -4,8 +4,8 @@
     justify-content: center;
     align-items: center;
     width: 180px;
-    height: 238px;
     cursor: pointer;
+    text-align: center;
 
     @media (max-width: 429px){
         width: 40vw;
@@ -19,9 +19,17 @@
             object-fit: cover;
 
             @media (max-width: 429px){
-        width: 40vw;
-        height: 40vw;
-      }
+              width: 40vw;
+              height: 40vw;
+            }
+        }
+
+        &_name {
+            font-size: 0.7rem;
+
+            &--eng {
+                font-size: 1.1rem;
+            }
         }
     }
 }
