--- a/src/components/Shapes/Shapes.scss
+++ b/src/components/Shapes/Shapes.scss
@@ -1,4 +1,6 @@
-.Vege {
+@use "../../styles/animations";
+
+.Shapes {
    padding-block: 64px;
     background: linear-gradient(#CBED86, #FFFFFF, #FFFFFF, #CBED86);
    min-height: 100vh;
@@ -17,7 +19,7 @@
       background: url('https://demo.promo///og/CH/images/return.png') center no-repeat;
    }
 
-   .vege_block {
+   .shapes_block {
     color: #F28190;
      font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
      display: flex;
@@ -27,7 +29,7 @@
      gap: 16px;
      padding-block: 50px;
 
-     .veg {
+     .shape {
       &_block {
          display: flex;
       flex-direction: column;
@@ -44,7 +46,7 @@
          border: 2px solid #D95F70;
       border-radius: 80px;
       width: 180px;
-
+      
       @media (max-width: 429px){
         width: 40vw;
       }
