--- a/src/components/Alphabet/Alphabet.scss
+++ b/src/components/Alphabet/Alphabet.scss
@@ -1,5 +1,5 @@
 .Alphabet {
-   padding-block: 64px;
+   padding-block: 34px;
     background-color: #d8be19;
    min-height: 100vh;
    display: flex;
@@ -25,6 +25,7 @@
      justify-content: center;
      gap: 16px;
      padding-block: 50px;
+     overflow: hidden;
 
      .letter {
       &_block {
