--- a/src/components/Vege/Vege.scss
+++ b/src/components/Vege/Vege.scss
@@ -1,5 +1,5 @@
 .Vege {
-   padding-block: 64px;
+   padding-block: 34px;
     background: linear-gradient(#CBED86, #FFFFFF, #FFFFFF, #CBED86);
    min-height: 100vh;
    display: flex;
@@ -26,6 +26,7 @@
      justify-content: center;
      gap: 16px;
      padding-block: 50px;
+     overflow: hidden;
 
      .veg {
       &_block {
